# hard-pass

./: Cargo.toml  README.md
src/: lib.rs
src/common/: algfn.rs  claims.rs  contexts.rs  formal_field.rs  koala_passthrough.rs  math.rs  mod.rs  pack.rs  protocol.rs  random.rs  transcript.rs
src/logup_star/: logup_star.rs  mod.rs  quotient_gkr.rs
src/sumcheck/: dense_sumcheck.rs  generic.rs  glue.rs  mod.rs  sumcheckable.rs  twist.rs
src/sumcheck/gkr/: mod.rs
src/sumcheck/twist/: full.rs  lookup_phase.rs  mod.rs  read_phase.rs  sum_phase.rs
